# Cimmino-Phantom-Reconstruction

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  executionscript.sh  plots.ipynb
FINAL Project/: CMakeLists.txt  README.md
FINAL Project/Other-Implementations/: execution_script.sh
FINAL Project/Other-Implementations/OpenMP/: Utilities.cpp  image_omp.txt  openmp.cpp
FINAL Project/Other-Implementations/Sequential/: Sequential.cpp  Utilities.cpp  Utilities.hpp  image_seq.txt  seq_performance_log.csv
FINAL Project/Other-Implementations/data/: debug_transposed_A.txt  image_omp.txt  image_omp_10.txt  image_omp_100.txt  image_omp_1000.txt  image_omp_2000.txt  image_omp_500.txt  image_seq.txt  image_seq_10.txt  image_seq_100.txt  image_seq_2000.txt  image_seq_500.txt  view_reconstructed_image.py
FINAL Project/Other-Implementations/include/: Utilities.hpp
FINAL Project/Other-Implementations/logs/: performance_log.csv
FINAL Project/Other-Implementations/utilities/: Utilities.cpp
FINAL Project/data/: metal_1000.txt  metal_10000.txt  metal_4000.txt  phantom_256.txt  phantom_astra.py  reconstructed_10.txt  reconstructed_100.txt  reconstructed_1000.txt  reconstructed_2000.txt  reconstructed_500.txt  view_reconstructed_image.py
FINAL Project/include/: MetalContext.hpp  Utilities.hpp  kernels.metal  mtlComputeEngine.hpp  mtlRenderEngine.hpp
FINAL Project/logs/: metal_performance_log.csv  performance_log.csv
FINAL Project/src/: Utilities.cpp  main.mm  mtlComputeEngine.mm  mtlRenderEngine.mm
FINAL_Project/: .clang-format  .gitattributes  CMakeLists.txt  plots.ipynb
FINAL_Project/Other-Implementations/: README.md
FINAL_Project/Other-Implementations/data/: image_omp_100.txt  image_seq_10.txt  image_seq_100.txt  image_seq_500.txt  view_reconstructed_image.py
FINAL_Project/Other-Implementations/logs/: performance_log.csv
FINAL_Project/data/: projection_astra.py
FINAL_Project/include/: MetalContext.hpp
FINAL_Project/logs/: metal_performance_log.csv
FINAL_Project/metal-data/: metal_1000.txt  metal_500.txt
FINAL_Project/metal-include/: Utilities.hpp  mtlRenderEngine.hpp
FINAL_Project/metal-logs/: metal_performance_log.csv  tests_performance_log.csv
FINAL_Project/metal-src/: Utilities.cpp  main.mm  mtlComputeEngine.mm  mtlRenderEngine.mm
FINAL_Project/shaders/: kernels.metal
Other-Implementations/: execution_script.sh
Other-Implementations/OpenMP/: normalisationTimer.cpp  openmp.cpp
Other-Implementations/Sequential/: Sequential.cpp  normalisationTimer.cpp
Other-Implementations/data/: image_omp_10.txt  image_omp_100.txt  image_omp_1000.txt  image_omp_500.txt  image_seq_10.txt  image_seq_100.txt  image_seq_1000.txt  image_seq_500.txt  norm_sinogram_256.txt  view_images.py
Other-Implementations/include/: Utilities.hpp
Other-Implementations/logs/: normalisation_log.csv  performance_log.csv
Other-Implementations/utilities/: Utilities.cpp
algorithm-tester/: main.mm
metal-data/: .gitignore  metal_10.txt  metal_100.txt  metal_1000.txt  metal_2000.txt  metal_500.txt  other_phantom.py  phantom_astra.py  phantom_model_11_256.txt  phantom_model_13_256.txt  phantom_model_4_256.txt  projection_astra.py  sinogram_astra.py  solution_1.txt  solution_10.txt  solution_100.txt  view_images.py  view_reconstructed_image.py
metal-include/: AlgorithmTester.hpp  MetalComputeEngine.hpp  MetalContext.hpp  MetalRenderEngine.hpp  MetalUtilities.hpp  NormalisationProfiler.hpp  Utilities.hpp  mtlComputeEngine.hpp  mtlRenderEngine.hpp  sinogramNormaliser.hpp
metal-logs/: metal_performance_log.csv  normalisation_log.csv  other_phantom_experiment.csv  relaxation_experiment_log.csv  tests_performance_log.csv
metal-shaders/: kernels.metal
metal-src/: AlgorithmTester.mm  MTLImplementation.cpp  MetalComputeEngine.mm  MetalRenderEngine.mm  MetalUtilities.mm  NormalisationProfiler.mm  Utilities.cpp  main.mm  metal_implementation.cpp  mtlComputeEngine.mm  mtlRenderEngine.mm  sinogramNormaliser.mm
normalisation-profiler/: main.mm
normalisation-tests/: testSinogramNormalisation.mm
